# ParticleEffects

./: CMakeLists-win.txt  CMakeLists.txt  Makefile  linuxbuild.sh  mingwbuild.bat
build-old/Linux/x86_64/Debug/spark_demo_app/: CMakeCache.txt  Makefile  spark_demo_app
build-old/Linux/x86_64/Debug/spark_demo_app/res/Shaders/: Box.frag.glsl  Box.vert.glsl  Floor.frag.glsl  Simple.vert.glsl
demos/src/: AirFlowDemo.cpp  RainDemo.cpp  SnowDemo.cpp
include/Core/: SPK_Modifier.h  SPK_Shader.h
include/RenderingAPIs/OpenGLES/: SPK_GLESLineRenderer.h  SPK_GLESQuadRenderer.h  SPK_GLES_DEF.h
include/Window/: SPK_Window_Manager.h
res/Shaders/: Crate.vert.glsl  Particles.vert.glsl  Splash.frag.glsl
src/Core/: SPK_Shader.cpp  glad.c
src/RenderingAPIs/OpenGLES/: SPK_GLESLineRenderer.cpp  SPK_GLESQuadRenderer.cpp
src/Window/: SPK_Window_Manager.cpp
